fixed z-index issue for menu overlay

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,7 +9,7 @@
     align-items: center;
     gap: 80px;
     color: #fff;
-    z-index: 1000;
+    z-index: 900;
 }
 
 .Footer a {
